--- a/clients/mobile-ui/public/index.html
+++ b/clients/mobile-ui/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
 
     <base href="%PUBLIC_URL%" />
@@ -9,6 +9,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#ffffff" />
+
+    <meta name="google" value="notranslate" />
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
@@ -26,7 +28,7 @@
     <title>%REACT_APP_WEBSITE_NAME%</title>
 
   </head>
-  <body>
+  <body class="notranslate">
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
