--- a/clients/mobile-ui/public/index.html
+++ b/clients/mobile-ui/public/index.html
@@ -34,6 +34,7 @@
 
     <main id="root" role="main"></main>
 
+    <div id="menu"></div>
     <div id="dialog"></div>
     <div id="notification"></div>
 
