--- a/clients/mobile-ui/public/index.html
+++ b/clients/mobile-ui/public/index.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#ffffff" />
+    <meta http-equiv="Cache-Control" content="no-cache">
 
     <meta name="google" value="notranslate" />
 
