--- a/clients/mobile-ui/public/index.html
+++ b/clients/mobile-ui/public/index.html
@@ -21,8 +21,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="%PUBLIC_URL%/icon-32.png" type="image/png">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icon-16.png" type="image/png">
 
     <script src="https://kit.fontawesome.com/7bd9075b89.js" crossorigin="anonymous"></script>
 
