--- a/clients/mobile-ui/public/index.html
+++ b/clients/mobile-ui/public/index.html
@@ -8,6 +8,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+
     <meta name="theme-color" content="#ffffff" />
     <meta http-equiv="Cache-Control" content="no-cache">
 
@@ -16,7 +17,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <meta name="author" content="Пятаков Виктор">
-    <meta name="keywords" content="очки,очки для зрения,оправы,изготовление очков,изготовление очков на заказ,изготовление очков по речепту" />
+    <meta name="keywords" content="Пироги, булочки, пирожки, печенье, симферополе" />
     <meta name="description" content="" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
