--- a/clients/client-ui/public/index.html
+++ b/clients/client-ui/public/index.html
@@ -13,8 +13,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <meta name="author" content="Пятаков Виктор">
-    <meta name="keywords" content="очки,очки для зрения,оправы,изготовление очков,изготовление очков на заказ,изготовление очков по речепту" />
-    <meta name="description" content="" />
+    <meta name="keywords" content="Осетинские пироги, осетинская кухня, хаш, люля-кебаб, доставка еды, доставка еды по Симферополю" />
+    <meta name="description" content="Интернет магазин осетинской кухни" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -35,5 +35,20 @@
     <div id="dialog"></div>
     <div id="notification"></div>
 
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+      ym(86885897, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+      });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/86885897" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
   </body>
 </html>
