--- a/clients/mobile-ui/public/index.html
+++ b/clients/mobile-ui/public/index.html
@@ -22,8 +22,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="icon" href="%PUBLIC_URL%/icon-vector.svg" type="image/svg+xml">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/icon-vector.svg" type="image/svg+xml">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml">
 
     <script src="https://kit.fontawesome.com/7bd9075b89.js" crossorigin="anonymous"></script>
 
