--- a/clients/client-ui/public/index.html
+++ b/clients/client-ui/public/index.html
@@ -14,7 +14,7 @@
 
     <meta name="author" content="Пятаков Виктор">
     <meta name="keywords" content="Осетинские пироги, осетинская кухня, хаш, люля-кебаб, доставка еды, доставка еды по Симферополю" />
-    <meta name="description" content="Интернет магазин осетинской кухни" />
+    <meta name="description" content="Осетинской кухни. Доставка еды Симферополь. Осетинские пироги." />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
