--- a/clients/client-ui/public/index.html
+++ b/clients/client-ui/public/index.html
@@ -13,8 +13,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <meta name="author" content="Пятаков Виктор">
-    <meta name="keywords" content="Осетинские пироги, осетинская кухня, хаш, люля-кебаб, доставка еды, доставка еды по Симферополю" />
-    <meta name="description" content="Осетинской кухни. Доставка еды Симферополь. Осетинские пироги." />
+    <meta name="keywords" content="Осетинские пироги. Кухня Осетии. Осетинская кухня. Хаш. Люля-кебаб. Доставка еды в Крыму. Доставка еды по Симферополю" />
+    <meta name="description" content="Осетинская кухня. Доставка еды Симферополь. Осетинские пироги. Осетинская кухня под заказ. Осетинские пироги в городе Симферополь. Заказ и доставка готовой еды" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
